Feat: Invoker parseArgs